refactor: 프로메테우스 응답 존재 여부 메서드 추출